--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,9 @@ plugins:
   - jekyll-github-metadata
 
 
+# Custom default for permalinks
+permalink: /:title:output_ext
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
